Add ball audit tracklet report
